--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ margin: 0 50px;
   left: 0;
   height: 14px;
   border-radius: 10px;
-  background-color: #A01823; /* Designer Colour */
+  background-color: #c31d2b; /* Designer Colour */
   /* margin: 0 7px; */
 }
 
