--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ margin: 0 50px;
   left: 0;
   height: 14px;
   border-radius: 10px;
-  background-color: #d02f25; /* Designer Colour */
+  background-color: #A56D5F; /* Designer Colour */
   /* margin: 0 7px; */
 }
 
@@ -63,7 +63,7 @@ margin: 0 50px;
   right: 0;
   height: 14px;
   border-radius: 10px;
-  background-color:  #1b4b9d; /* Company Colour */
+  background-color:  #120E49; /* Company Colour */
   /* margin: 0 7px; */
 }
 
@@ -93,7 +93,7 @@ margin: 0 50px;
   left: 0;
   height: 14px;
   border-radius: 14px;
-  background-color: #639f67; /* Earth Colour */
+  background-color: #7A8C76; /* Earth Colour */
 }
 
 /* pointers on slider */
