--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ margin: 0 50px;
   left: 0;
   height: 14px;
   border-radius: 10px;
-  background-color: #A56D5F; /* Designer Colour */
+  background-color: #905D51; /* Designer Colour */
   /* margin: 0 7px; */
 }
 
@@ -93,7 +93,7 @@ margin: 0 50px;
   left: 0;
   height: 14px;
   border-radius: 14px;
-  background-color: #7A8C76; /* Earth Colour */
+  background-color: #6A7A66; /* Earth Colour */
 }
 
 /* pointers on slider */
