--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ margin: 0 50px;
   margin-left: -11px;
   cursor: pointer;
   /* box-shadow: 0 3px 8px rgba(0, 0, 0, 0.4); */
-  background-image: url(https://github.com/redactless/sliderbar/raw/main/Two%20Way%20Arrow.png);
+  background-image: url(https://github.com/redactless/sliderbar/raw/main/Thick%20Arrows.png);
   background-repeat: no-repeat;
   background-size: 28px 28px;
   background-position: center;
