--- a/style.css
+++ b/style.css
@@ -285,6 +285,10 @@ form button:hover{
   .values span{
     font-size: 13px;
   }
+  
+  .fixed-values span{
+   font-size: 13px; 
+  }
 
   #slider > div > #range-right,
   #slider > div > #range-left,
