--- a/style.css
+++ b/style.css
@@ -279,7 +279,7 @@ form button:hover{
       top: -9px;
       width: 4px;
       border-radius: 0%;
-      margin-left: 0px;
+      margin-left: -4px;
   }
 
   .values span{
@@ -311,7 +311,7 @@ form button:hover{
 
 @media (max-width: 475px){
   body {
-    /* margin: 0 10px; */
+    margin: 0 10px;
     /* overflow: hidden; */
   }
   
